<resources>
    <string name="app_name">Wolmo Android Cookbook</string>
    <string name="app_title">Wolmo Android\nCookbook</string>
    <string name="app_example_recipe_description">The Bad Boy of the Block. You can\'t resist him, huh?</string>
    <string name="unexpected_error">Unexpected error</string>
    <string name="recipe_picker_google_login">Google login</string>
    <string name="recipe_picker_facebook_login">Facebook login</string>
    <string name="recipe_picker_twitter_login">Twitter login</string>
    <string name="recipe_picker_instagram_login">Instagram login</string>
    <string name="recipe_picker_room">Room Database</string>
    <string name="recipe_picker_mp_chart">MP Chart</string>
    <string name="recipe_picker_navigation">Navigation Arch. Component</string>
    <string name="recipe_picker_data_sync">Data Sync Recipe with a Pokemon flavor!</string>
    <string name="recipe_picker_tests">Tests</string>
    <string name="recipe_picker_koin">Koin</string>
    <string name="recipe_picker_notifications">Notifications</string>
    <string name="recipe_picker_graph_ql">Graph QL</string>
    <string name="recipe_picker_coroutines">Coroutines</string>
    <string name="recipe_picker_firebase">Firebase Analytics</string>
    <string name="recipe_picker_mercadopago">MercadoPago</string>
    <string name="recipe_picker_google_maps">Google Maps</string>
    <string name="recipe_picker_fingerprint">Login with fingerprint</string>
    <string name="recipe_picker_lottie">Lottie</string>
    <string name="recipe_picker_search">Search for a recipe…</string>
    <string name="google_login_logout">Logout</string>
    <string name="google_login_error_cancelled">The sign in was cancelled by the user.</string>
    <string name="google_login_error_in_progress">A sign in process is currently in progress and the current one cannot continue.</string>
    <string name="google_login_error_failed">The sign in attempt didn\'t succeed with the current account.</string>
    <string name="google_login_error_unexpected">Unexpected error.</string>
    <string name="navigation_navigation1">Navigation 1</string>
    <string name="navigation_navigation2">Navigation 2</string>
    <string name="navigation_navigation3">Navigation 3</string>
    <string name="navigation_navigation4">Navigation 4</string>
    <string name="navigation_go_to_1">GO TO 1</string>
    <string name="navigation_go_to_2">GO TO 2</string>
    <string name="navigation_go_to_3">GO TO 3</string>
    <string name="navigation_go_to_4">GO TO 4</string>
    <string name="navigation_go_to_new_activity">GO TO NEW ACTIVITY</string>
    <string name="data_sync_no_pokemon">No Pokemon Found!</string>
    <string name="data_sync_search_pokemon">Search a Pokemon</string>
    <string name="data_sync_check_it_out">Check it out!</string>
    <string name="facebook_login_app_id">329539014322126</string>
    <string name="facebook_login_protocol_scheme">fb329539014322126</string>
    <string name="facebook_login_error_cancelled">The sign in was cancelled by the user.</string>
    <string name="facebook_login_error_unexpected">Unexpected error</string>
    <string name="facebook_login_btn">Login with Facebook</string>
    <string name="twitter_consumer_key">GT7c84P1Ua0sCOWMirLZPI5RG</string>
    <string name="twitter_consumer_secret">98IyZsqCAhojROEGpj8l5u0STuuI4zYa0p5cnhzPasAszUlom6</string>
    <string name="twitter_custom_login">Custom Log in with Twitter</string>
    <string name="twitter_profile_image">Fetch Profile Image</string>
    <string name="twitter_logout">Logout</string>
    <string name="twitter_auth_error">Twitter: Authorize Failed</string>
    <string name="twitter_email_error">Twitter: Email validation Failed</string>
    <string name="twitter_picture_error">Twitter: Picture download Failed</string>
    <string name="twitter_un_auth_error">Twitter: You need to login first</string>
    <string name="twitter_credentials_error">Twitter: Error while try to logout</string>
    <string name="twitter_internal_error">Internal error…</string>
    <string name="twitter_error_network_unavailable">Network is unavailable, please try later…</string>
    <string name="twitter_login_data">User ID: %1$s \nUsername: %2$s \nEmail ID: %3$s</string>
    <string name="twitter_picture_data">User ID: %1$d \nUsername: %2$s \nEmail ID: %3$s \nDescription: %4$s</string>
    <string name="notifications_general_channel">General notifications</string>
    <string name="notifications_general_channel_id">general_notifications</string>
    <string name="notifications_general_channel_description">All notifications with a normal priority will use this channel</string>
    <string name="notifications_basic_type_title">Show simple notification</string>
    <string name="notifications_text_expandable_type_title">Show with expandable text</string>
    <string name="notifications_inbox_title">Show with inbox style</string>
    <string name="notifications_settings_title">Open channel notifications</string>
    <string name="notifications_short_content">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="notifications_basic_title">Basic notification</string>
    <string name="notifications_large_content">Recently we have discussed the emerging concept of smart farming that makes agriculture more efficient and effective with the help of high-precision algorithms. The mechanism that drives it is Machine Learning — the scientific field that gives machines the ability to learn without being strictly programmed. It has emerged together with big data technologies and high-performance computing to create new opportunities to unravel, quantify, and understand data intensive processes in agricultural operational environments.</string>
    <string name="notifications_big_picture_title">Show with a picture</string>
    <string name="notifications_actions_title">Show with actions</string>
    <string name="notifications_inbox_line_1">Line 1: this is the very first line of an inbox styled notification</string>
    <string name="notifications_inbox_line_2">Line 2: this is the very first line of an inbox styled notification</string>
    <string name="instagram_title"><u>Instagram Login</u></string>
    <string name="instagram_login_btn">Login</string>
    <string name="instagram_logout_btn">Logout</string>
    <string name="instagram_fetch_data_btn">Fetch Data</string>
    <string name="instagram_login_success">Login Success!!</string>
    <string name="instagram_logout_success">Loogut Success!!</string>
    <string name="instagram_error_login">An error occurs during login, please try again…</string>
    <string name="instagram_error_network_unavailable">Network is unavailable, please try later…</string>
    <string name="instagram_error_cookies">Error occurs during logout…</string>
    <string name="instagram_error_api">An error occurs during data download, please try again…</string>
    <string name="instagram_error_fetch_data">You need to login before download personal data</string>
    <string name="instagram_error_internal">Internal error… Please try later</string>
    <string name="instagram_login_data">ID: %1$s, FullName: %2$s, UserName: %3$s</string>
    <string name="room_login">Login</string>
    <string name="room_logout">Logout</string>
    <string name="room_add_row">Insert Row</string>
    <string name="room_clear_db">Clear DB</string>
    <string name="room_user">User</string>
    <string name="room_login_error">You need to login first</string>
    <string name="room_row_inserted">Data saved in DB</string>
    <string name="room_rows_deleted">Data in DB deleted</string>
    <string name="room_row_deleted">Data item deleted</string>
    <string name="room_row_modified">Data item modified</string>
    <string name="room_input_title_add">New Item</string>
    <string name="room_input_title_modify">Edit Item</string>
    <string name="room_input_positive">Accept</string>
    <string name="room_input_negative">Cancel</string>
    <string name="room_row_data">User: %1$s, Data: %2$s</string>
    <string name="mp_chart_prompt">Chose a chart</string>
    <string-array name="mp_chart_types">
        <item>NONE</item>
        <item>Bar Chart</item>
        <item>Bubble Chart</item>
        <item>Combined Chart</item>
        <item>Horizontal Bar Chart</item>
        <item>Line Chart</item>
        <item>Pie Chart</item>
        <item>Radar Chart</item>
        <item>Candle Stick Chart</item>
        <item>Scatter Chart</item>
    </string-array>
    <string name="mp_chart_label">Data Set</string>
    <string name="mp_chart_bar">Description of BarChart</string>
    <string name="mp_chart_pie">Description of PieChart</string>
    <string name="mp_chart_bubble">Description of BubbleChart</string>
    <string name="mp_chart_combined">Description of CombinedChart</string>
    <string name="mp_chart_h_bar">Description of HorizontalBarChart</string>
    <string name="mp_chart_radar">Description of RadarChart</string>
    <string name="mp_chart_candle">Description of CandleStickChart</string>
    <string name="mp_chart_scatter">Description of ScatterChart</string>
    <string name="mp_chart_title">Title of DataSet</string>
    <string name="mp_chart_p_dialog">Getting data from assets sample</string>
    <string name="mp_chart_item_bar">Value: %1$f | Data: %2$s</string>
    <string name="mp_chart_item_pie">Item: %1$s | Value: %2$f</string>
    <string name="mp_chart_item_bubble">X: %1$f | Y: %2$f | Size: %3$f | Data: %4$s</string>
    <string name="test_login_email">Email</string>
    <string name="test_login_password">Password</string>
    <string name="test_login_login">Login</string>
    <string name="test_login_empty_field">Debe completar este campo</string>
    <string name="test_login_invalid_email">Email invalido</string>
    <string name="test_login_login_error">Incorrect user or password.</string>
    <string name="koin_login_email">Email</string>
    <string name="koin_login_password">Password</string>
    <string name="koin_login_login">Login</string>
    <string name="koin_login_empty_field">Debe completar este campo</string>
    <string name="koin_login_invalid_email">Email invalido</string>
    <string name="koin_login_login_error">Incorrect user or password.</string>
    <string name="label_make_request">Make <Reques></Reques>t</string>
    <string name="order_id">Order ID: %1$s</string>
    <string name="order_total">Order Total: %1$s</string>
    <string name="order_username">Username: %1$s</string>
    <string name="order_delivery_address">Delivery Address: %1$s</string>
    <string name="coroutines_examples_builders_title">Builders</string>
    <string name="coroutines_examples_cascade_cancellation_cancel_A">Cancel A</string>
    <string name="coroutines_examples_cascade_cancellation_cancel_B">Cancel B</string>
    <string name="coroutines_examples_cascade_cancellation_cancel_C">Cancel C</string>
    <string name="analytics_help">I need help!</string>
    <string name="analytics_view_age">Show my age!</string>
	<string name="analytics_crash">Crash it!</string>
    <string name="mercadopago_pay_label">You\'re buying all these items:</string>
    <string name="mercadopago_pay_button">Let\'s pay!</string>
    <string name="mercadopago_name_hint">Name</string>
    <string name="mercadopago_total_text">Total</string>
    <string name="mercadopago_email_hint">Email</string>
    <string name="fingerprint_login_title">Wolmo Login</string>
    <string name="fingerprint_login_username">Username</string>
    <string name="fingerprint_login_password">Password</string>
    <string name="fingerprint_login_button">Login</string>
    <string name="activate_fingerprint">Activate fingerprint</string>
    <string name="fingerprint_activation_title">Fingerprint activation</string>
</resources>