<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<EditText
		android:id="@+id/vCoroutinesEmailInput"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:hint="@string/test_login_email"
		android:textAlignment="center" />

	<EditText
		android:id="@+id/vCoroutinesPasswordInput"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/spacing_large_extra"
		android:hint="@string/test_login_password"
		android:inputType="textPassword"
		android:textAlignment="center" />

	<Button
		android:id="@+id/vCoroutinesLoginBtn"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/test_login_login" />
</LinearLayout>