<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/vKoinLoginEmailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/koin_login_email"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/vKoinLoginPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large_extra"
            android:hint="@string/koin_login_password"
            android:inputType="textPassword"
            android:textAlignment="center" />

        <Button
            android:id="@+id/vKoinLoginLoginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/koin_login_login" />
    </LinearLayout>
</layout>
