<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="@dimen/spacing_large"
        android:paddingEnd="@dimen/spacing_large">

        <EditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/test_login_email"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@id/password_input"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium_extra"
            android:hint="@string/test_login_password"
            android:inputType="textPassword"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@id/age_request_button"
            app:layout_constraintTop_toBottomOf="@id/email_input" />

        <Button
            android:id="@+id/age_request_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium_extra"
            android:text="@string/analytics_view_age"
            app:layout_constraintBottom_toTopOf="@id/help_button"
            app:layout_constraintTop_toBottomOf="@id/password_input" />

        <TextView
            android:id="@+id/help_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium_extra"
            android:text="@string/analytics_help"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/age_request_button" />

        <Button
            android:id="@+id/crash_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/analytics_crash"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/help_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
