<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/spacing_huge">

    <TextView
        android:id="@+id/vFingerprintTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fingerprint_login_title"
        android:textSize="@dimen/font_huge"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/vFingerprintUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fingerprint_login_username"
        android:gravity="center"
        android:inputType="text"
        android:layout_marginTop="@dimen/static_spacing_largest"
        app:layout_constraintTop_toBottomOf="@+id/vFingerprintTitle" />

    <EditText
        android:id="@+id/vFingerprintPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fingerprint_login_password"
        android:gravity="center"
        android:inputType="textPassword"
        android:layout_marginTop="@dimen/spacing_large"
        app:layout_constraintTop_toBottomOf="@id/vFingerprintUsername" />

    <Button
        android:id="@+id/vFingerprintLoginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fingerprint_login_button"
        android:layout_marginTop="@dimen/spacing_huge"
        app:layout_constraintTop_toBottomOf="@id/vFingerprintPassword" />

    <LinearLayout
        android:id="@+id/vFingerprintActivateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/spacing_huge"
        app:layout_constraintTop_toBottomOf="@id/vFingerprintLoginButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <ImageView
            android:layout_width="@dimen/spacing_big_extra"
            android:layout_height="@dimen/spacing_big_extra"
            android:src="@drawable/bg_fingerprint" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/activate_fingerprint" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
