<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/spacing_huge">

        <TextView
            android:id="@+id/vFingerprintActivationTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fingerprint_activation_title"
            android:textSize="@dimen/font_huge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/vFingerprintActivationUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/static_spacing_largest"
            android:gravity="center"
            android:hint="@string/fingerprint_login_username"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@+id/vFingerprintActivationTitle" />

        <EditText
            android:id="@+id/vFingerprintActivationPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:gravity="center"
            android:hint="@string/fingerprint_login_password"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@id/vFingerprintActivationUsername" />

        <Button
            android:id="@+id/vFingerprintActivationLoginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_huge"
            android:text="@string/activate_fingerprint"
            app:layout_constraintTop_toBottomOf="@id/vFingerprintActivationPassword" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
