<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/cancelJobAButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/coroutines_examples_cascade_cancellation_cancel_A"
            app:layout_constraintEnd_toStartOf="@id/cancelJobBButton"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.30" />

        <Button
            android:id="@+id/cancelJobBButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/coroutines_examples_cascade_cancellation_cancel_B"
            app:layout_constraintEnd_toStartOf="@id/cancelJobCButton"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@id/cancelJobAButton"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.30" />

        <Button
            android:id="@+id/cancelJobCButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/coroutines_examples_cascade_cancellation_cancel_C"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@id/cancelJobBButton"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.30" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
